--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ---------- dependencies ----------
+node_modules/
+frontend/node_modules/
+backend/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# ---------- build outputs ----------
+frontend/build/
+frontend/dist/
+backend/build/
 
-# testing
-/coverage
+# ---------- environment files ----------
+.env
+.env.*
+backend/.env
 
-# production
-/build
+# ---------- testing ----------
+coverage/
 
-# misc
+# ---------- misc ----------
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
