--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "validator": "^13.15.26",
+    "zod": "^4.3.5"
   }
 }
