--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
+    "socket.io": "^4.8.3",
     "validator": "^13.15.26",
     "zod": "^4.3.5"
   }
