--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "roughjs": "^4.6.6",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
